chore(admin-canary): add communities gadget empty locale text

--- a/packages/bonde-admin-canary/public/locales/pt-BR/home.json
+++ b/packages/bonde-admin-canary/public/locales/pt-BR/home.json
@@ -12,7 +12,8 @@
 
   "gadgets": {
     "communities": {
-      "title": "Minhas Comunidades"
+      "title": "Minhas Comunidades",
+      "emptyText": "Crie uma comunidade para começar a causar!"
     }
   }
 }
